# fisher-rao-ml

./: .gitignore  CLAUDE.md  FISHER_RAO_VS_KL_REPORT.md  Makefile  README.md  pyproject.toml
experiments/: aggregate_dimred_stress.py  aggregate_ml_stress.py  aggregate_results.py  aggregate_vae_results.py  cifar10_no_bn_ablation.py  cifar10_noisy_label_benchmark.py  cifar_n_benchmark.py  dimred_stress_benchmark.py  distillation_benchmark.py  dynamic_loss_benchmark.py  fr_contrastive_benchmark.py  fr_rd_finetuning_benchmark.py  gradient_norm_analysis.py  mlp_gradient_norm_analysis.py  noisy_label_benchmark.py  paper_benchmark.py  representation_distance_benchmark.py  resnet_noisy_label_benchmark.py  soft_label_benchmark.py  tsne_fisher_rao.py  vae_benchmark.py  vae_fisher_rao.py  wrong_label_prob_analysis.py
memory/: project_fisher_rao_ml.md
notebooks/: fisher_rao_playground.py
reports/: fisher_rao_vs_kl_arxiv.bbl  fisher_rao_vs_kl_arxiv.tex  fr_contrastive.bbl  fr_contrastive.tex  fr_noisy_labels.bbl  fr_noisy_labels.tex  fr_representation_distance.bbl  fr_representation_distance.tex  generate_bn_ablation_figures.py  generate_cifar_n_figures.py  generate_cifar_n_section.py  generate_dynamic_loss_figures.py  generate_dynamic_loss_section.py  generate_figures.py  generate_fr_contrastive_figures.py  generate_fr_rd_figures.py  generate_gradient_norm_figures.py  generate_gradient_saturation_figure.py  generate_noisy_label_figures.py  generate_wrong_label_prob_figures.py  references.bib  update_gradient_norm_table.py
tests/: test_evaluation.py  test_losses.py
(+65 files in other folders)
